# hplc_bo_optimizer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  TODO.md  UI_PLAN.md  docker-compose.yml  hplc_optimize.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: __init__.py  config.py  main.py
app/components/: __init__.py  advanced.py  home.py  navigation.py  process_monitor.py  reporting.py  simulation.py  status.py  suggestion.py  validation.py
app/services/: __init__.py  optimizer.py
app/utils/: __init__.py  logging_config.py  session.py  ui_helpers.py
hplc_bo/: __init__.py  bo_simulation.py  config.py  convergence.py  data_types.py  generate_rt_files.py  gradient_utils.py  lock_manager.py  optimizer.py  param_types.py  pdf_parser.py  run_trial.py  run_validation.py  scoring.py  simulation_runner.py  study_access.py  study_registry.py  study_runner.py  validation.py  validation_bo.py  vector_similarity.py  workflow.py
scripts/: dev_startup.sh  docker-pre-commit.sh  install-git-hooks.sh
tests/: test_pdf_parser.py
