[tool.poetry]
name = "hplc-bo-optimizer"
version = "0.1.0"
description = "Bayesian Optimization for HPLC method development"
authors = ["Umesh Dangat <udangat@udangat.name>"]
packages = [{ include = "hplc_bo" }]

[tool.poetry.dependencies]
python = "^3.11"
optuna = "^3.6.0"
numpy = "^1.24"
pandas = "^1.5"
matplotlib = "^3.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^24.3.0"
isort = "^5.12.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
preview = true
